--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -1,4 +1,18 @@
 [project]
+# If true (default), the app will be available to anonymous users.
+# If false, users will need to authenticate and be part of the project to use the app.
+public = true
+
+# The project ID (found on https://cloud.chainlit.io).
+# The project ID is required when public is set to false or when using the cloud database.
+id = "Flipkart-cJTSFLCptLNk"
+
+# Uncomment if you want to persist the chats.
+# local will create a database in your .chainlit directory (requires node.js installed).
+# cloud will use the Chainlit cloud database.
+# custom will load use your custom client.
+database = "local"
+
 # Whether to enable telemetry (default: true). No personal data is collected.
 enable_telemetry = true
 
@@ -8,37 +22,12 @@ user_env = []
 # Duration (in seconds) during which the session is saved when the connection is lost
 session_timeout = 3600
 
-# Enable third parties caching (e.g LangChain cache)
-cache = false
-
-# Follow symlink for asset mount (see https://github.com/Chainlit/chainlit/issues/317)
-# follow_symlink = false
-
-[features]
-# Show the prompt playground
-prompt_playground = true
-
-# Authorize users to upload files with messages
-multi_modal = true
-
-# Allows user to use speech to text
-[features.speech_to_text]
-    enabled = false
-    # See all languages here https://github.com/JamesBrill/react-speech-recognition/blob/HEAD/docs/API.md#language-string
-    # language = "en-US"
-
 [UI]
 # Name of the app and chatbot.
-name = "Chatbot"
-
-# Show the readme while the conversation is empty.
-show_readme_as_default = true
+name = "Flipify"
 
 # Description of the app and chatbot. This is used for HTML tags.
 # description = ""
-
-# Large size content are by default collapsed for a cleaner ui
-default_collapse_content = true
 
 # The default value for the expand messages settings.
 default_expand_messages = false
@@ -49,30 +38,26 @@ hide_cot = false
 # Link to your github repo. This will add a github button in the UI's header.
 # github = ""
 
-# Specify a CSS file that can be used to customize the user interface.
-# The CSS file can be served from the public directory or via an external link.
-# custom_css = "/public/test.css"
-
 # Override default MUI light theme. (Check theme.ts)
 [UI.theme.light]
-    #background = "#FAFAFA"
-    #paper = "#FFFFFF"
+    background = "#FAFAFA"
+    paper = "#FFFFFF"
 
     [UI.theme.light.primary]
-        #main = "#F80061"
-        #dark = "#980039"
-        #light = "#FFE7EB"
+        main = "#027BD5"
+        dark = "#980039"
+        light = "#FFE7EB"
 
 # Override default MUI dark theme. (Check theme.ts)
 [UI.theme.dark]
-    #background = "#FAFAFA"
-    #paper = "#FFFFFF"
+#    background = "#FAFAFA"
+#    paper = "#FFFFFF"
 
     [UI.theme.dark.primary]
-        #main = "#F80061"
-        #dark = "#980039"
-        #light = "#FFE7EB"
+        main = "#027BD5"
+        dark = "#980039"
+        light = "#FFE7EB"
 
 
 [meta]
-generated_by = "0.7.400"
+generated_by = "0.6.2"
